--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "gatsby-plugin-offline": "^2.0.22",
     "gatsby-plugin-react-helmet": "^3.0.5",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.19",
+    "gatsby-plugin-sharp": "^2.0.20",
     "gatsby-source-contentful": "^2.0.29",
     "gatsby-source-filesystem": "^2.0.19",
     "gatsby-transformer-sharp": "^2.1.13",
@@ -21,7 +21,8 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
-    "react-parallax": "^2.1.0"
+    "react-parallax": "^2.1.0",
+    "typeface-sumana": "0.0.54"
   },
   "keywords": [
     "gatsby"
