--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.7.0",
     "react-helmet": "^5.2.0",
     "react-parallax": "^2.1.0",
+    "typeface-playfair-display": "0.0.54",
     "typeface-sumana": "0.0.54"
   },
   "keywords": [
